--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-  "name": "blog.f8",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "nodemon --inspect src/index.js",
-    "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vinhraudaklak/nodejs_blogF8.git"
-  },
-  "keywords": [
-    "f8",
-    "blog",
-    "nodejs"
-  ],
-  "author": "LearnSonDang",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vinhraudaklak/nodejs_blogF8/issues"
-  },
-  "homepage": "https://github.com/vinhraudaklak/nodejs_blogF8#readme",
-  "dependencies": {
-    "express": "^4.21.2",
-    "express-handlebars": "^8.0.1"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "node-sass": "^9.0.0",
-    "nodemon": "^3.1.9"
-  }
+	"name": "blog.f8",
+	"version": "1.0.0",
+	"description": "",
+	"main": "src/index.js",
+	"scripts": {
+		"start": "nodemon --inspect src/index.js",
+		"watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"beautiful": "lint-staged"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/vinhraudaklak/nodejs_blogF8.git"
+	},
+	"keywords": [
+		"f8",
+		"blog",
+		"nodejs"
+	],
+	"author": "LearnSonDang",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/vinhraudaklak/nodejs_blogF8/issues"
+	},
+	"homepage": "https://github.com/vinhraudaklak/nodejs_blogF8#readme",
+	"dependencies": {
+		"express": "^4.21.2",
+		"express-handlebars": "^8.0.1",
+		"mongoose": "^8.12.1"
+	},
+	"lint-staged": {
+		"src/**/*.{js,json,scss}": "prettier --write --single-quote --trailing-comma all --tab-with 4"
+	},
+	"husky": {
+		"hook": {
+			"pre-commit": "npm test",
+			"pre-push": "npm test",
+			"...": "..."
+		}
+	},
+	"devDependencies": {
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.0",
+		"morgan": "^1.10.0",
+		"node-sass": "^9.0.0",
+		"nodemon": "^3.1.9",
+		"prettier": "^3.5.3"
+	}
 }
