--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	"dependencies": {
 		"express": "^4.21.2",
 		"express-handlebars": "^8.0.1",
-		"mongoose": "^8.12.1"
+		"mongoose": "^8.12.1",
+		"mongoose-slug-generator": "^1.0.4"
 	},
 	"lint-staged": {
 		"src/**/*.{js,json,scss}": "prettier --write --single-quote --trailing-comma all --tab-with 4"
