--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"express": "^4.21.2",
 		"express-handlebars": "^8.0.1",
+		"method-override": "^3.0.0",
 		"mongoose": "^8.12.1",
 		"mongoose-slug-generator": "^1.0.4"
 	},
